# bot

./: .gitignore  README.md
coding-bot/: .env.template  README.md  gunicorn.conf.py  issue_bot_service.py  pyproject.toml  使用手册.md  部署.md
coding-bot/scripts/: bootstrap.sh  install_systemd.sh
docs/: IssurerSkill_cn.md  github-issue-handover.md  github机器人部署手册.md  issue-18-联调记录.md
example/example_feishuGitIssue/: start_gitissue_gpt54.sh  status_gitissue_gpt54.sh  stop_gitissue_gpt54.sh
linked-openclaw/: feishu-openclaw
linked-openclaw/coder/: .gitignore  README.md  pyproject.toml
linked-openclaw/coder/config/: coder-bot.env.template  gunicorn.conf.py  openclaw.json.template
linked-openclaw/coder/docs/: 使用手册.md  部署手册.md
linked-openclaw/coder/scripts/: bootstrap.sh  install_systemd.sh  openclaw-local  run_gateway.sh  start_gateway.sh  status_gateway.sh  stop_gateway.sh
linked-openclaw/coder/src/: __init__.py  config.py  db.py  issue_service.py  main.py  scheduler.py  webhook_server.py  worker.py
linked-openclaw/coder/src/clients/: __init__.py  feishu_client.py  github_client.py  openclaw_client.py
linked-openclaw/coder/src/utils/: __init__.py  helpers.py
linked-openclaw/coder/tests/: __init__.py  test_github_client.py  test_issue_service.py  test_retry_flow.py  test_worker_prompt.py
linked-openclaw/feishu-openclaw/: .gitignore  README.md  start_lark_atonly_g53.sh  stop_lark_atonly_g53.sh
linked-openclaw/issuer/: .gitignore  README.md
nanobot-lb-20260415-011455/nanobot/rust/control-plane/: Cargo.toml
scripts/: package.sh  starter.sh
(+97 files in other folders)
