[project]
name = "coder-bot"
version = "0.1.0"
description = "GitHub App issue automation bot backed by local OpenClaw sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0.0",
    "flask>=3.0.0",
    "gunicorn>=23.0.0",
    "requests>=2.31.0",
]

[project.scripts]
coder-bot = "src.main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
